[gd_scene load_steps=13 format=2]

[ext_resource path="res://ui/proof/assumptions/buttons/InstantiateButton.gd" type="Script" id=1]
[ext_resource path="res://ui/proof/assumptions/buttons/UseButton.gd" type="Script" id=2]
[ext_resource path="res://ui/proof/assumptions/buttons/EqualityButton.gd" type="Script" id=3]
[ext_resource path="res://ui/theme/icons/star_left.tres" type="Texture" id=4]
[ext_resource path="res://ui/theme/icons/star_right.tres" type="Texture" id=5]
[ext_resource path="res://ui/theme/icons/star_rightwards.tres" type="Texture" id=6]
[ext_resource path="res://ui/theme/icons/star_leftwards.tres" type="Texture" id=7]
[ext_resource path="res://ui/theme/icons/star.tres" type="Texture" id=8]
[ext_resource path="res://ui/proof/assumptions/buttons/StarButton.gd" type="Script" id=9]
[ext_resource path="res://ui/proof/assumptions/buttons/UseButtons.gd" type="Script" id=10]
[ext_resource path="res://ui/proof/assumptions/buttons/AndStarButton.gd" type="Script" id=11]
[ext_resource path="res://ui/proof/assumptions/buttons/ImplStarButton.gd" type="Script" id=12]

[node name="UseButtons" type="HBoxContainer"]
margin_left = 80.0
margin_right = 510.0
margin_bottom = 22.0
script = ExtResource( 10 )

[node name="Star" type="Button" parent="."]
unique_name_in_owner = true
margin_right = 32.0
margin_bottom = 22.0
theme_type_variation = "ButtonStar"
icon = ExtResource( 8 )
script = ExtResource( 9 )

[node name="Use" type="Button" parent="."]
unique_name_in_owner = true
margin_left = 36.0
margin_right = 73.0
margin_bottom = 22.0
theme_type_variation = "ButtonGreen"
text = "Use"
script = ExtResource( 2 )

[node name="Instantiate" type="Button" parent="."]
unique_name_in_owner = true
margin_left = 77.0
margin_right = 165.0
margin_bottom = 22.0
theme_type_variation = "ButtonGreen"
text = "Instantiate"
script = ExtResource( 1 )

[node name="EqLeft" type="Button" parent="."]
unique_name_in_owner = true
margin_left = 169.0
margin_right = 212.0
margin_bottom = 22.0
theme_type_variation = "ButtonGreen"
text = "<=="
script = ExtResource( 3 )

[node name="EqRight" type="Button" parent="."]
unique_name_in_owner = true
margin_left = 216.0
margin_right = 259.0
margin_bottom = 22.0
theme_type_variation = "ButtonGreen"
text = "==>"
script = ExtResource( 3 )

[node name="StarL" type="Button" parent="."]
unique_name_in_owner = true
margin_left = 263.0
margin_right = 302.0
margin_bottom = 22.0
theme_type_variation = "ButtonStar"
icon = ExtResource( 4 )
script = ExtResource( 11 )

[node name="StarR" type="Button" parent="."]
unique_name_in_owner = true
margin_left = 306.0
margin_right = 348.0
margin_bottom = 22.0
theme_type_variation = "ButtonStar"
icon = ExtResource( 5 )
script = ExtResource( 11 )

[node name="StarLw" type="Button" parent="."]
unique_name_in_owner = true
margin_left = 352.0
margin_right = 386.0
margin_bottom = 22.0
theme_type_variation = "ButtonStar"
icon = ExtResource( 7 )
script = ExtResource( 12 )

[node name="StarRw" type="Button" parent="."]
unique_name_in_owner = true
margin_left = 390.0
margin_right = 427.0
margin_bottom = 22.0
theme_type_variation = "ButtonStar"
icon = ExtResource( 6 )
script = ExtResource( 12 )
